# Cislune-RE-RASSOR

./: .gitignore  rover_measurements.md
.devcontainer/: Dockerfile  compose.yaml  devcontainer.json  docker-compose.amd.yaml  docker-compose.yaml
docker/: Dockerfile  compose.yml  docker-compose.nvidia.yaml  docker-compose.yaml  docker-compose.yml
firmware/: platformio.ini
firmware/src/: main.cpp
install/: local_setup.sh  setup.sh
install/rover_bringup/share/rover_bringup/: package.sh
install/rover_control/share/rover_control/: local_setup.sh  package.sh
install/rover_description/share/rover_description/: package.sh
install/rover_description/share/rover_description/urdf/: rover.urdf.xacro
install/rover_firmware/share/rover_firmware/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/rover_navigation/share/rover_navigation/: local_setup.sh  package.sh
install/rover_sim/share/rover_sim/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
rover_ros2/rover_bringup/: CMakeLists.txt  package.xml
rover_ros2/rover_bringup/config/: diff_drive_controllers.yaml
rover_ros2/rover_bringup/launch/: rerassor_sim.launch.py  rerassor_teleop.launch.py
rover_ros2/rover_control/: CMakeLists.txt  rerassor_hardware_plugin.xml
rover_ros2/rover_control/controllers/: diff_cont.yaml  joy_teleop.yaml  joystick.yaml  sim_controller.yaml
rover_ros2/rover_control/launch/: joy.launch.py  teleop.launch.py
rover_ros2/rover_description/: CMakeLists.txt  package.xml
rover_ros2/rover_description/config/: diff_drive_controllers.yaml
rover_ros2/rover_description/launch/: display.launch.py  robot_state_publisher.launch.py  rsp.launch.py  view_model.launch.py  view_urdf.launch.py
rover_ros2/rover_description/rviz/: display.rviz
rover_ros2/rover_description/rviz2/: view_model_config.rviz
rover_ros2/rover_description/simplified_urdf/: inertial_macros.xacro  properties.xacro  rerassor.urdf.xacro  ros2_control.xacro  wheel.xacro  wheel_arm.xacro
rover_ros2/rover_description/urdf/: camera.xacro  config.xacro  cylinder_macro.xacro  imu.xacro  macros.xacro  materials.xacro  paver.xacro  rerassor.urdf.xacro  rerassor.xacro.urdf  ros2_control.xacro  rover.urdf.xacro  rover_core.xacro  wheel.xacro
rover_ros2/rover_description/urdf/meshes/: paver.dae  wheel.dae
rover_ros2/rover_description/urdf_old/: rover.urdf.xacro
rover_ros2/rover_firmware/: CMakeLists.txt  package.xml  platformio.ini
rover_ros2/rover_firmware/src/: blank.cpp  main.cpp
rover_ros2/rover_sim/: CMakeLists.txt  package.xml
rover_ros2/rover_sim/config/: rosgz_bridge.yaml
scripts/: build_multiarch_container.bash  build_multiarch_ghcr.io_image.bash  build_multiarch_ghcr.io_image.sh  devcontainer_init_devices.sh  get_teensy_rules.sh  install_teensy_rules.sh  open_docker_amd.bash  open_docker_amd.sh  open_docker_nvidia.bash  open_docker_nvidia.sh
src/rover_control/src/: rerassor_hardware_interface.cpp
src/rover_description/: CMakeLists.txt
src/rover_firmware/: CMakeLists.txt
src/rover_sim/: package.xml
tempdevcontainer/: .env  devcontainer.json  docker-compose.yaml
