<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rover_description</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="moodyellam@gmail.com">moody</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>launch</depend>
  <depend>urdf</depend>
  <depend>ros_gz_sim</depend>
  <depend>ros_gz_sim_bridge</depend>

  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_mesh_path="${prefix}/models"/>
  </export>
</package>
